Add rest of Results section and Discussion section to turb.tex and move the rawinsonde turbulence results to the first chapter instead of the last.

--- a/aux_files/references.bib
+++ b/aux_files/references.bib
@@ -82,7 +82,7 @@
 @STRING{TCFD      = "Theor.\ Comput.\ Fluid Dyn."}
 @STRING{WEA       = "Weather"}
 @STRING{WW        = "Weatherwise"}
-@STRING{WF        = "Wea.\ Forecasting"}
+@STRING{WAF       = "Wea.\ Forecasting"}
 @STRING{WMOB      = "WMO Bull."}
 
 
@@ -99,6 +99,15 @@ journal = JAOT,
 year = {2017},
 volume = {34},
 pages = {777-796}
+}
+
+@article{BowmanFowler2015,
+author = {Bowman, K. P. and M. D. Fowler},
+year = {2015},
+title = {{The diurnal cycle of precipitation in tropical cyclones}},
+journal = JCLI,
+volume = {28},
+pages = {5325-5334}
 }
 
 @article{Braunetal2016,
@@ -136,7 +145,7 @@ title = {{The governing equations for CM1}},
 note = {{[Available online at \url{http://www2.mmm.ucar.edu/people/bryan/cm1/cm1_equations.pdf}]}}
 }
 
-@article{Buetal,
+@article{Buetal2014,
 author = {Bu, Y. P. and R. G. Fovell and K. L. Corbosiero},
 year = {2014},
 title = {Influence of cloud-radiative forcing on tropical cyclone structure},
@@ -145,7 +154,7 @@ volume = {71},
 pages = {1644-1622}
 }
 
-@article{Chen2013,
+@article{ChenZhang2013,
 author = {Chen, H. and D.-L. Zhang},
 year = {2013},
 title = {On the rapid intensification of Hurricane Wilma (2005). Part II: Convective bursts and the upper-level warm core},
@@ -256,6 +265,15 @@ volume = {69},
 pages = {988-996}
 }
 
+@article{Garrettetal2005,
+author = {Garrett, T. J. and B. C. Navarro and C. H. Twohy and E. J. Jensen and D. G. Baumgardner and P. T. Bui and H. Gerber and R. L Herman and A. J. Heymsfield and P. Lawson and P. Minnis and L. Nguyen and M. Poellot and S. K. Pope and F. P. J. Valero and E. M. Weinstock},
+year = {2005},
+title = {{Evolution of a Florida cirrus anvil}},
+journal = JAS,
+volume = {62},
+pages = {2352-2372}
+}
+
 @article{Gentry1967,
 author = {Gentry, R.C.},
 year = {1967},
@@ -297,6 +315,15 @@ author = {Jarvinen, B. R. and C. J. Neumann and M. A. S. Davis},
 year = {1984},
 title = {{A tropical cyclone data tape for the North Atlantic Basin, 1886–1983: Contents, limitations, and use}},
 note = {{ NOAA Tech. Memo. NWS NHC 22, 21 pp. [Available online at http://www.nhc.noaa.gov/pdf/NWS-NHC-1988-22.pdf.]}},
+}
+
+@article{JordanJordan1954,
+author = {Jordan, C. L. and E. S. Jordan},
+year = {1954},
+title = {{On the mean thermal structure of tropical cyclones}},
+journal = {{J. Meteor.}},
+volume = {11},
+pages = {440-448}
 }
 
 @article{Jordan1958,
@@ -342,6 +369,15 @@ volume = {145},
 pages = {1339-1359}
 }
 
+@article{Koteswaram1967,
+author = {Koteswaram, P.},
+year = {1957},
+title = {{On the structure of hurricanes in the upper troposphere and lower stratosphere}},
+journal = MWR,
+volume = {95},
+pages = {541-564}
+}
+
 @article{KuangBretherton2004,
 author = {Kuang, Z. and C. S. Bretherton},
 year = {2004},
@@ -360,6 +396,15 @@ volume = {80},
 pages = {271-287}
 }
 
+@article{Lenzetal2009,
+author = {Lenz, A. and K. M. Bedka and W. F. Feltz and S. A. Ackerman},
+year = {2009},
+title = {{Convectively induced transverse band signatures in satellite imagery}},
+journal = WAF,
+volume = {24},
+pages = {1362-1373}
+}
+
 @article{LoveGeller2012,
 author = {Love, P. T. and M. A. Geller},
 year = {2012},
@@ -376,6 +421,15 @@ title = {{LES} of laminar flow in the {PBL}: A potential problem for convective 
 journal = MWR,
 volume = {144},
 pages = {1841-1850}
+}
+
+@article{MelhauserZhang2014,
+author = {Melhauser, C. and F. Zhang},
+year = {2014},
+title = {{Diurnal radiation cycle impact on the pregenesis environment of Hurricane Karl (2010)}},
+journal = JAS,
+volume = {71},
+pages = {1241-1259}
 }
 
 @article{Molinarietal2014,
@@ -512,6 +566,15 @@ title = {{Convection-permitting simulations of the environment supporting widesp
 journal = MWR,
 volume = {137},
 pages = {1972-1990}
+}
+
+@article{Trieretal2010,
+author = {Trier, S. B. and R. D. Sharman and R. G. Fovell and R. G. Frehlich},
+year = {2010},
+title = {{Numerical simulation of radial cloud bands within the upper-level outflow of an observed mesoscale convective system}},
+journal = JAS,
+volume = {67},
+pages = {2990-2999}
 }
 
 @article{Waco1970,
