--- a/turb.tex
+++ b/turb.tex
@@ -84,10 +84,131 @@ The upper tail of this distribution extends to very large values, indicating tha
 
 These results are consistent with \cite{Molinarietal2014}, who found that the frequency of low $R_b$ is maximized in the upper troposphere, and that both static stability and vertical wind shear perturbations contribute to its production.
 
+\subsection{Variation of Richardson number with TC intensity}
+
+Stratifying the soundings by intensity reveals striking differences in the upper-tropospheric environments of hurricanes and weak TCs (tropical depressions and tropical storms).
+Hurricanes (Fig. \ref{fig:rb-strat}a) exhibit a broad region where more than 21\% of sondes observe $R_b < 0.25$ at any given level, extending past the 100--300-km radial bin (note that the scale differs from that in Fig. \ref{fig:rb-all}).
+Weak TCs (Fig. \ref{fig:rb-strat}b), on the other hand, possess a more radially confined maximum of less than 9\%.
+
+In hurricanes, the maximum frequency of $R_b<0.25$ at the inner radii is centered near 14-km altitude, whereas in weak TCs it occurs near 13 km.
+The largest frequency of $R_b < 0.25$ in hurricanes---indicated by the warm colors---exhibits a much steeper downward radial slope at the inner radii than that observed in all storms (Fig. \ref{fig:rb-all}).
+At all radii, low Rb extends to higher altitudes in hurricanes than in weak TCs, and larger frequencies of $R_b < 0.25$ extend much farther radially outward.
+
+The differences between the azimuthally averaged numerator and denominator of Eq. \ref{eq:rb} for hurricanes and weak TCs are plotted in Figs. \ref{fig:stabsheardiffs}a and \ref{fig:stabsheardiffs}b, respectively.
+These differences represent hurricane values minus those for weak TCs, such that regions shaded in red exhibit larger values in hurricanes, and regions shaded in blue exhibit smaller values.
+Solid orange lines represent the tropopause height for hurricanes and dashed lines are for weak TCs.
+
+Static stability within the upper troposphere of hurricanes is considerably smaller than that in weak TCs (Fig. \ref{fig:stabsheardiffs}a), a pattern that extends past the 1000-km radius.
+The stability differences encompassed by the blue shading are associated with lapse rate differences ranging from approximately 0.5 (lightest blue) to 2 K km\textsuperscript{-1} (darkest blue).
+Thus, the lapse rate difference between the two intensity classes is a significant fraction of the dry adiabatic lapse rate throughout much of the upper troposphere.
+This difference is significant at the 99\% confidence interval for most data points in the 12–16-km layer.
+
+Two layers of enhanced vertical wind shear exist in hurricanes: one centered near 16-km altitude and another near 11.5 km (Fig. \ref{fig:stabsheardiffs}b).
+The upper layer of enhanced shear is strong, with some differences exceeding 10 m s\textsuperscript{-1} km\textsuperscript{-1} (shear-squared term of 10\textsuperscript{-4} s\textsuperscript{-2}).
+Within an extensive portion of this enhanced shear layer, however, the static stability is too large to allow $R_b$ to fall below 0.25.
+The lower-altitude enhanced shear layer exhibits maximum differences between 6.3 and 7.7 m s\textsuperscript{-1} km\textsuperscript{-1} (shear-squared term of 0.4 and 0.6 x 10\textsuperscript{-4} s\textsuperscript{-2}, respectively).
+This layer lies within a region of smaller static stability than the upper shear layer and appears to be associated with some increased frequency of $R_b<0.25$ at the inner radii in hurricanes (Fig. \ref{fig:tempdiffs}).
+On the other hand, large $R_b$ differences exist even in regions where the mean vertical wind shear differences are zero.
+For example, at 14-km altitude in the 0–200-km radial bin---where the frequency of $R_b<0.25$ is maximized in hurricanes---the difference in low $R_b$ frequency between hurricanes (Fig. \ref{fig:rb-strat}a) and weak TCs (Fig. \ref{fig:rb-strat}b) is approximately 18\%.
+This same region, however, is characterized by slightly smaller vertical wind shear in hurricanes than in weak TCs (Fig. \ref{fig:stabsheardiffs}b).
+Thus, although increased mean vertical wind shear can contribute to increased frequencies of low $R_b$, it does not appear to be a necessary ingredient.
+
+Decreasing mean static stability is accomplished through a combination of average warming below 14 km and average cooling above as TCs intensify (Fig. \ref{fig:tempdiffs}).
+Hurricanes are at least 1 K warmer than weak TCs throughout most of the mid- to upper troposphere, with a maximum warm anomaly of greater than 3 K at the inner radii.
+Above about 15 km, hurricanes are cooler than weak TCs, with a maximum cold anomaly of greater than 4 K extending past the 200--400-km radial bin.
+
+These temperature differences can arise due to a combination of a number of processes.
+As a TC intensifies, boundary layer equivalent potential temperature ($\theta_e$) increases near the vortex center.
+Accordingly, the buoyancy of rising air parcels increases, allowing them to penetrate into the lower stratosphere.
+Since the moist lapse rate approaches dry adiabatic in the upper levels, strong adiabatic cooling can occur for moist ascent in the upper troposphere and lower stratosphere.
+This strong cooling partially manifests as an elevation of the average tropopause and a destabilization of the layer above 15 km, as seen in Fig. \ref{fig:stabsheardiffs}a.
+This is consistent with the findings of \cite{JordanJordan1954} and \cite{Koteswaram1967}, who observed an elevated tropopause and a layer of near-neutral static stability in the upper troposphere, especially at the inner radii.
+
+As a TC vortex intensifies, the magnitude of its mid- to upper-tropospheric warm anomaly increases, consistent with balanced dynamics.
+This strengthening warm core is clearly present below 14 km at the inner radii in Fig. \ref{fig:tempdiffs}.
+In addition, both observational \citep{Garrettetal2005} and modeling \citep{Buetal2014} studies indicate that radiative cooling dominates the top layer of thick anvil cirrus.
+In their idealized simulations of an intense hurricane, \cite{Buetal2014} found that, averaged over the diurnal cycle, the 12--16-km layer is characterized by net radiative cooling extending past the 300-km radius.
+Immediately below this cooling layer exists a broad region of weak radiative warming that reaches a maximum near 11-km altitude.
+The temperature difference structure in Fig. \ref{fig:tempdiffs} is consistent with these modeling results.
+Thus, it is plausible that radiative tendencies combine with adiabatic cooling near the tropopause to produce the lowerstability layer in hurricanes seen in Fig. \ref{fig:stabsheardiffs}a.
+Regardless of the mechanisms, the presence of this low-stability layer means that only small perturbations are required to decrease the bulk Richardson number to a value below 0.25.
+
+Distributions of the perturbation static stability and vertical wind shear are shown in Fig. \ref{fig:dist-pert}.
+These perturbations are computed by subtracting the azimuthally averaged static stability and vertical wind shear from each individual observation in the 11–15-km layer and within the 400-km radius.
+The azimuthal averages here use 100-km nonoverlapping radial bins instead of 200-km overlapping bins to avoid double counting observations in the distributions.
+Because of the skewness of the static stability and vertical wind shear distributions (see Fig. \ref{fig:dist-all}), the azimuthal averages are larger than most of the individual observations in the dataset.
+As a result, the peaks of the distributions in Fig. \ref{fig:dist-pert} are negative.
+
+The perturbation distributions alone are not able to explain why low $R_b$ is more common in hurricanes.
+The static stability distribution for weak TCs (dotted red line) is shifted toward lower values relative to that for hurricanes (solid red line), indicating that stronger local decreases in static stability occur in weak TCs.
+This result alone suggests that weak TCs should have a higher frequency of low Rb than hurricanes, but this is not observed.
+This indicates that the mean static stability is a more important contributor to decreasing $R_b$ in hurricanes than the perturbation static stability.
+The vertical wind shear distribution is shifted toward higher values in hurricanes (solid blue line) relative to weak TCs (dotted blue line).
+This indicates that the shear perturbations in hurricanes are more positive (more favorable for low $R_b$) than in weak TCs.
+These larger perturbations coexist with larger mean vertical wind shear (Fig. \ref{fig:stabsheardiffs}b).
+
+The synthesis of these results suggests that the higher frequency of $R_b < 0.25$ in hurricanes is due to a combinationof decreased upper-tropospheric mean static stability and increased mean and perturbation vertical wind shear.
+The perturbation static stability does not appear to contribute to the increased frequency of low $R_b$ in hurricanes.
+
+\subsection{Variation of Richardson number with time of day}
+
+To assess whether the TC diurnal cycle described by \cite{Dunionetal2014} is associated with variations in Richardson number, the upper-tropospheric environment is analyzed for all soundings collected at 0000 and 1200 UTC.
+Sondes released at 0600 and 1800 UTC are not considered here because their numbers are much fewer and the observations are skewed toward more intense TCs.
+The exclusion of these sondes from more intense TCs yields a smaller overall frequency of $R_b < 0.25$ in Fig. \ref{fig:rb-time} than in Fig. \ref{fig:rb-strat}.
+
+Since all sondes were released in the Caribbean and the eastern United States, the 0000 and 1200 UTC composites are representative of the hours near sunset and sunrise, respectively.
+Considering these opposite extremes of the diurnal cycle--one after extended sunlight and the other after extended darkness--allows for an interpretation of how $R_b$ changes with time of day.
+
+The difference between the frequency of $R_b < 0.25$ observed in the evening (Fig. \ref{fig:rb-time}a) and in the morning (Fig. \ref{fig:rb-time}b) is considerably smaller than the difference between the two intensity classifications shown in Figs. \ref{fig:rb-strat}a and \ref{fig:rb-strat}b.
+Evidence exists, however, that low $R_b$ is more common in the morning than in the evening.
+The region in which low $R_b$ is most common at 1200 UTC---near 200 km---is the radius at which the diurnal pulse of cold cloud is expected to be located at 0800 LST.
+Since the majority of these sondes were released in the eastern time zone, where 1200 UTC corresponds to 0700 LST, these results indicate that the morning maximum of low Rb is located near the radius of the diurnal pulse as described by \cite{Dunionetal2014}.
+
+The diurnal variation of azimuthally averaged static stability (Fig. \ref{fig:stabsheartime}a) and vertical wind shear (Fig. \ref{stabsheartime}b) is small.
+Upper-tropospheric wind shear might be slightly larger in the morning than in the evening, but this difference is not statistically significant.
+The static stability profile and the tropopause level are nearly identical at 0000 and 1200 UTC.
+Thus, unlike the intensity variability seen in the previous section, the $R_b$ differences do not appear to be attributable to a more favorable average background state.
+
+Distributions of the perturbation static stability and vertical wind shear (Fig. \ref{fig:dist-pert-time}) are shifted toward smaller values in the morning relative to the evening.
+This indicates that local static stability perturbations are more conducive to low Rb in the morning, while local shear perturbations are less conducive.
+These results, combined with the lack of a significant difference in the mean fields, suggest that local static stability perturbations may be the driver behind the larger frequency of $R_b < 0.25$ in the morning.
+
 %---------------------------------------------------------------------------------------%
 \section{Discussion}
 \label{sec:discussion}
 %---------------------------------------------------------------------------------------%
+
+High-vertical-resolution rawinsondes were used to document the existence of low–bulk Richardson number layers in tropical cyclones.
+The peak in $Rb < 0.25$ existed in the inner 200 km at the 13.5-km level.
+This is consistent with the results of \cite{Molinarietal2014}, but the rawinsondes used here sampled a deeper layer, which allowed for an examination of the tropopause height.
+The low-$R_b$ maximum extended out past the 1000-km radius, with a steady decrease in the height of the maximum to the 11.5-km level at the outer edge.
+The presence of an extended upper-tropospheric low--Richardson number layer supports the assumption of Richardson number criticality in tropical cyclone outflow by \cite{EmanuelRotunno2011}.
+
+The frequency of upper-tropospheric $R_b < 0.25$ was found to be more than twice as large in hurricanes as in weak TCs.
+The key factor was lower mean static stability in the upper troposphere of hurricanes, which was associated with a warmer midtroposphere and colder upper troposphere.
+Higher temperatures below 14 km arose from the midtropospheric warm anomaly that is required to maintain thermal wind balance in an intensifying TC.
+In addition, it is likely that larger radiative heating exists in the hurricane’s well-developed and long-lasting cirrus canopy.
+The upper-tropospheric cooling was accompanied by a 1-km increase in tropopause height in hurricanes, which was associated with much lower static stability in the upper troposphere.
+It is hypothesized that persistent convection, gravity wave critical-layer interactions, and enhanced radiative coolingnear the top of the hurricane cirrus canopy contributed to the development of this cool layer.
+
+The mean fields do not account for local variations in static stability and vertical wind shear that are often responsible for low--Richardson number layers in mesoscale convective systems (\citeauthor{Lenzetal2009} \citeyear{Lenzetal2009}; \citeauthor{Trieretal2010} \citeyear{Trieretal2010}).
+The widely spaced rawinsondes employed in this study cannot evaluate the role of such local variations.
+Instead, the distributions of perturbation stability and shear were compared for hurricanes and weak TCs.
+Somewhat surprisingly, weaker storms had more frequent negative stability perturbations, but also more frequent positive shear perturbations, with offsetting impacts on Richardson number.
+The results suggest that the mean field variations might be the predominant factor in the more frequent occurrence of a low Richardson number in hurricanes than in weaker TCs.
+This more favorable background state makes it more likely that forcing associated with convection, radiative effects, and gravity waves could produce a low Richardson number.
+
+The diurnal variation of the Richardson number was also examined. The mean static stability in the evening was nearly the same as the mean static stability in the early morning.
+This is surprising given the results of \cite{MelhauserZhang2014}, which showed that during a perpetual-night simulation, strong radiative cooling at cloud top overlies a layer of longwave warming within cloud.
+Such a radiative heating profile should act to decrease the upper-tropospheric static stability overnight, but this was not observed in the mean fields.
+If the TC diurnal cycle is convective in nature, as suggested by \cite{Dunionetal2014}, and supported by \cite{BowmanFowler2015}, it is possible that by early morning the convection has acted to remove the instability created by these radiative effects.
+The diurnal variations in Richardson number and perturbation static stability, although small, are at least consistent with the presence of more active convection in the morning.
+
+Recent dropsonde observations from the NASA Global Hawk and WB-57 aircraft show promise in further illuminating how TCs modify their uppertropospheric environment.
+Dropsondes are deployed from these aircraft in the stratosphere, allowing an analysis of the full depth of the cirrus canopy.
+Unlike the rawinsonde composites used here, analyses from these soundings have large spatiotemporal resolution, which allows for a snapshot of the upper troposphere of a single storm.
+Preliminary work with these data show that very large horizontal temperature variations can arise across the cirrus canopy, and large fluctuations can occur at one location over time.
+The causes and implications of these large variations are the subject of future work.
 
 %---------------------------------------------------------------------------------------%
 %FIGURES AND TABLES
