Begin final chapter (hs3.tex)

--- a/dissertation.tex
+++ b/dissertation.tex
@@ -37,6 +37,7 @@
 \include{turb}
 \include{patricia}
 \include{modeling}
+\include{hs3}
 %\include{conclusions}
 % ...
 % Add new \include{chapterX} statements for each chapter you add
