Add subtitle to and modify introduction in modeling.tex.

--- a/hs3.tex
+++ b/hs3.tex
@@ -4,7 +4,7 @@
 %                                                                 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
  
-\chapter{The tropopause-layer static stability structure of tropical cyclones as revealed by a large rawinsonde dataset}
+\chapter{The tropopause-layer static stability structure of tropical cyclones as revealed by HS3 dropsondes and a large rawinsonde dataset}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
 %---------------------------------------------------------------------------------------%
@@ -14,7 +14,7 @@
 The preceding two chapters documented the static stability evolution within extraordinarily intense TCs from both an observational and numerical modeling perspective.
 The question remains, however, whether these results can be generalized to a large number of TCs at a range of intensities.
 This chapter first documents the presence of large horizontal gradients of static stability observed within category one Hurricane Nadine (2012) during the NASA Hurricane and Severe Storm Sentinel (HS3).
-Then the radial-vertical static stability structure of a large number of TCs is analyzed using a large rawinsonde dataset, and the static stability structure is observed to vary with TC intensity.
+Then the static stability structure of a large number of TCs is analyzed using the same rawinsonde dataset as that employed by \cite{DuranMolinari2016}.
 
 %---------------------------------------------------------------------------------------%
 \section{Data and methods}
