--- a/modeling.tex
+++ b/modeling.tex
@@ -7,14 +7,16 @@
 \chapter{Tropopause evolution in a rapidly intensifying tropical cyclone: A static stability budget analysis in an idealized, axisymmetric framework}
 \resetfootnote %this command starts footnote numbering with 1 again.
 
+\textbf{Submitted to Journal of the Atmospheric Sciences, in review.}
+
 %---------------------------------------------------------------------------------------%
 \section{Introduction}
 %---------------------------------------------------------------------------------------%
 
-The preceding two chapters highlighted the effect of tropical cyclones on the tropopause and upper-level static stability structure in dropsonde observations.
-These observations alone, however, cannot explain the mechanisms that force the observed variability.
-Numerical simulations of an axisymmetric hurricane conducted in an idealized framework reproduced the observed variability.
-Using these simulations, some physical insight into these mechanisms is obtained and described in the present chapter.
+The preceding chapter used dropsonde observations to document the tropopause-layer static stability evolution of Hurricane Patricia.
+These observations alone, however, cannot explain the mechanisms that forced the static stability tendencies.
+In this chapter, numerical simulations of an axisymmetric hurricane are conducted in an idealized, axisymmetric framework.
+These simulations, which successfully reproduced the observed variability, provide some insight into the physical processes that might govern tropopause-layer static stability tendencies in TCs.
 
 %---------------------------------------------------------------------------------------%
 \section{Model setup}
