Copy and paste most of introduction section of Patricia paper into introduction.tex.

--- a/introduction.tex
+++ b/introduction.tex
@@ -6,11 +6,66 @@
 % \graphicspath{ {figures/introduction/} } %directory for figures
 \chapter{Introduction}
 \label{intro}
- \section{Section Heading}
-  I can reference a section using the label, for example: Section \ref{intro}.  
 
-\subsection{Subsection Heading}
-\label{subsection}
+\indent \indent Tropopause temperature is an important parameter in theoretical models of TC structure and intensity.
+\cite{EmanuelRotunno2011} expressed the maximum gradient wind speed at the top of the TC boundary layer as a function of upper-level outflow temperature.
+They argued that the outflow-layer stratification is determined by a requirement that the Richardson number remains near a critical value for turbulence.
+\cite{Emanuel2012} further showed that vortex amplification is a function of the radial gradient of outflow temperature, which is determined by small-scale turbulent mixing.
+Thus, within this theoretical framework, upper-tropospheric thermodynamics and turbulence play fundamental roles in determining vortex structure and evolution.
+From a climate perspective, changes in tropopause temperature could modify the theoretical maximum intensity that a TC can attain.
+\cite{Emanueletal2013} noted that recent increases in potential intensity [as defined by \cite{BisterEmanuel1998}] observed in the North Atlantic region can be explained by observed decreases in temperature near the tropopause.
+These theoretical arguments are supported by the three-dimensional radiative-convective equilibrium simulations of \cite{Wangetal2014}, in which the maximum wind speed of TCs increased by 0.4 m s\textsuperscript{-1} per 1 K of tropopause cooling.
+
+Despite its potential importance, most analyses of TC tropopause structure are decades old.
+\cite{JordanJordan1954} composited radiosonde ascents through many storms, finding that the tropopause near the storm center was both higher and colder than the surrounding region.
+In a case study of four landfalling hurricanes using radiosonde composites, \cite{Koteswaram1967} likewise found an elevated and anomalously cold tropopause at innermost radii in three of the storms.
+The one storm that did not have an anomalously cold tropopause [Arlene (1963)] was weakening as it recurved northward.
+\cite{Koteswaram1967} argued that the upper-level cold anomaly in the three storms was produced by convection overshooting its level of neutral buoyancy.
+These radiosonde studies produced analyses of high vertical resolution, but with the drawback of low horizontal resolution.
+This precluded a detailed analysis of finescale horizontal variability in the upper levels of TCs.
+
+A number of aircraft reconnaissance flights in the 1960s observed very strong horizontal temperature gradients in the inner core of hurricanes.
+\cite{Penn1966} noted that the tropopause over Hurricane Isbell (1964) sloped upward toward the storm’s inner core by 1.1 km over a 231.5-km horizontal distance.
+This elevated tropopause was associated with horizontal temperature gradients as large as 5\textdegree{}C (18.5 km)\textsuperscript{-1} in the lower stratosphere.
+The coldest temperatures, -85\textdegree{}C, were observed in the regions of most intense convection.
+Likewise in Hurricane Beulah (1967), the coldest temperature, -86\textdegree{}C, was observed a few hundred meters above the highest cloud tops \citep{Waco1970}.
+Very near the storm center, the temperature at 16.5-km altitude increased from -86\textdegree{}C to -77\textdegree{}C over a horizontal distance less than 30 km as the aircraft approached the storm center [see Fig. 2 ‘‘Run 2’’ in \cite{Waco1970}].
+This strong inward temperature increase was likely associated with an intense upper-tropospheric warm core within and near Beulah’s eye.
+
+The presence of a warm core in the upper troposphere of hurricanes was documented by a series of studies (\citeauthor{LaSeurHawkins1963} \citeyear{LaSeurandHawkins1963}; \citeauthor{HawkinsRubsam1968} \citeyear{HawkinsRubsam1968}; \citeauthor{HawkinsImbembo1976} \citeyear{HawkinsImbembo1976}) using aircraft observations.
+\citeauthor{HawkinsImbembo1976} (\citeyear{HawkinsImbembo1976}, their Fig. 6) depicted two anomalous warming maxima---one centered near 600 mb (1 mb = 1 hPa) and another centered near 300 mb---in Hurricane Inez (1966).
+The precise location of these warm cores cannot be known with certainty, however, since data were collected at only four levels: 750, 650, 500, and 180 mb.
+The upper-level warm core was recognized at least as early as \cite{Haurwitz1935}, who attributed its formation to subsidence warming.
+Although a number of authors (e.g., \citeauthor{Malkus1958} \citeyear{Malkus1958}; \citeauthor{Willoughby1979} \citeyear{Willoughby1979}; \citeauthor{Smith1980} \citeyear{Smith1980}) have described this subsidence in theoretical models, its precise effect on warm-core structure is still not fully understood.
+
+Until recently, it was widely accepted that the midlevel warm anomaly observed by \cite{HawkinsImbembo1976} was a departure from the typical TC warm-core structure, and that TCs are typically characterized by an upper-level warm core.
+Idealized simulations recently conducted by \cite{SternNolan2012}, however, challenged this perspective.
+Although an upper-level perturbation temperature maximum was observed in many of their simulations, all of them exhibited a midlevel temperature anomaly of higher magnitude.
+Their results were consistent with \cite{Halversonetal2006}, who observed with dropsondes a maximum temperature anomaly in the midlevels of Hurricane Erin (2001).
+Potential temperature ($\theta$) budgets computed by \cite{SternZhang2013} stressed the importance of the vertical profile of static stability in determining the warm core’s precise structure.
+Although mean descent within the eye maximized in the 12--13-km layer, subsidence warming was not large there because the static stability was small.
+Rather, the maximum temperature anomaly developed in the midtroposphere, where static stability reached a local maximum.
+A secondary warming maximum existed near the tropopause, where weaker subsidence coincided with larger static stability in the tropical tropopause layer.
+These results are consistent with \cite{OhnoSatoh2015}, whose idealized simulations exhibited a dramatic increase in upper-tropospheric $\theta$ toward the end of a TC’s intensification.
+Sawyer--Eliassen diagnostics \cite{PendergrassWilloughby2009} revealed that the contribution of balanced dynamics to the upper-tropospheric warming was dominated by the response to latent heating within the eyewall.
+This response was more pronounced later in the period when the vortex grew upward and inertial stability increased in the lower stratosphere, where static stability was large.
+\cite{ZhangChen2012} likewise argued that increasing inertial stability concentrated downdrafts in the highly stable lower stratosphere, leading to strong adiabatic warming in this layer.
+In numerical simulations, the upper-tropospheric subsidence appears to be related to a narrow inflow layer in the lower stratosphere.
+\cite{ChenZhang2013} and \cite{ChenGopalakrishnan2015} assert the importance of the inward advection of higher lower-stratospheric $\theta$ values from outer radii by this inflow layer in developing the upper-tropospheric warm core.
+\cite{Kieuetal2016}, on the other hand, did not find evidence for inward $\theta$ advection; rather, they stressed only the importance of subsidence warming as the inflow layer turned downward in the inner core (their Fig. 11a).
+
+Although none of these authors explicitly analyzed the inner-core tropopause variability, the simulations of \cite{OhnoSatoh2015} did show decreased static stability in the lower stratosphere over the eye after the upper-level warm core developed (their Figs. 9c and 10c).
+Meanwhile outside of the eye, the static stability just above the tropopause increased as the storm intensified.
+The development of this shallow layer of large static stability is consistent with a few early observations of strong, vertically confined temperature inversions just above the tropopause.
+An aircraft in Hurricane Beulah (1967) observed a 7\textdegree{}C temperature increase in a vertical layer less than 100 m deep just above the cloud top east of the eye \citep{Waco1970}.
+Likewise in Hurricane Isbell (1964), the temperature increased by about 8\textdegree{}C in a layer shallower than 300 m [see Fig. 5 in \cite{Gentry1967}].
+It is unclear whether these strong inversions were a consequence of the hurricane’s presence or if the inversions were a part of the background environment.
+
+More recent literature (e.g., \cite{Wirth2003}) has noted that strong, shallow temperature inversions immediately above the cold-point tropopause are a common feature in the tropics, now known as the tropopause inversion layer (TIL).
+On the planetary scale, TIL formation and maintenance has been tied to planetary wave dynamics \cite{Griseetal2010} and vertical gradients of radiative heating across the tropopause \citep{Randeletal2007}, but the relative contributions of dynamics and thermodynamics remains uncertain \citep{Ferreiraetal2016}.
+To our knowledge, no paper has examined how hurricanes affect the TIL, although the simulations of \cite{OhnoSatoh2015} provide some evidence that they can considerably alter the static stability near the tropopause.
+The importance of tropopause temperature in theoretical models of TCs, combined with the potential role of static stability in determining the precise structure of the warm core, motivates a closer look at the evolution of the tropopause and static stability in a hurricane.
+This dissertation will employ dropsonde and rawinsonde observations collected within TCs along with idealized modeling to investigate the tropopause-layer static stability structure and evolution of TCs.
 
 %-----Figures-----
 \clearpage
